# PRISM

./: .gitignore  MASTER_PROMPT.html  MASTER_PROMPT.md  README.md  agi_core.py  coherent_nn.py  fiber_nn.py  fiber_physics.py  main.py  paper_gen.py  prism_agent.py  prism_api.py  prism_explain.py  prism_foundation.py  prism_hitl.py  prism_mesh.py  prism_spiking.py  pyproject.toml  recursive_dev.py  recursive_dev_v2.py  recursive_prompt.py  use_cases.py
.github/workflows/: tests.yml
tests/: test_fiber_agi.py
